@@ -114,8 +114,10 @@ $lang = [
     'userdetails_invites'           => 'Invites',
     'userdetails_invitees'          => 'Invitees',
     'userdetails_invee'             => 'Invited Users',
-    'userdetails_reset'             => 'Reset Passkey',
+    'userdetails_reset'             => 'Reset Torrent Pass',
+    'userdetails_reset_auth'        => 'Reset Auth Key',
     'userdetails_pass_msg'          => 'Any active torrents must be downloaded again to continue leeching/seeding.',
+    'userdetails_auth_msg'          => 'This is used for Scars Upload Script',
     'userdetails_okay'              => 'Okay',
     'userdetails_details'           => 'Details for',
     'userdetails_donor'             => 'Donor',
