@@ -28,11 +28,11 @@ extract($_POST);
 unset($_POST);
 extract($_GET);
 unset($_GET);
-if (!empty($bot) && !empty($torrent_pass)) {
+if (!empty($bot) && !empty($auth)) {
     $user_id = $fluent->from('users')
         ->select(null)
         ->select('id')
-        ->where('class > ? AND username = ? AND torrent_pass = ? AND uploadpos = 1 AND suspended = "no"', UC_UPLOADER, $bot, $torrent_pass)
+        ->where('class > ? AND username = ? AND auth = ? AND uploadpos = 1 AND suspended = "no"', UC_UPLOADER, $bot, $auth)
         ->fetch('id');
 }
 if (empty($user_id)) {
